- Modified the SchemaDefinition-5.5.ssdl to treat char(36) columns as GUID (MySQL bug #61657, Oracle bug #12708208).
- Configured DataGridView to use VirtualMode and added some required events, so it can save back 
  to the data source the grid changes (MySQL bug #61617, Oracle bug #12711786).

Version 6.1.6
- Added MySqlHelper.ExecuteReader that takes an external connection and array of paramters (bug #56755)
- Handle MySqlCommand.CommandTimeout = 0 properly (Bug #57265)
- Do not call AcceptChanged on tables in MySqlDataAdapter.Update(),
  but on individual rows (Bug #57092)
- fixed problem with using bit parameters as output (bug #56756)
- fixed MySqlCommand.Clone so that the default command timeoout functionality is not disabled when
  you clone a command (bug #56806)
- fixed loading of mono.posix assembly to use the right assembly (bug #56410)
- adding mapping for UTF8MB4 charset introduced with 5.5.3 (bug #58244)
- return default values for text columns as quoted (bug #58167)
- fixed our DDEX code so that dragging tables from server explorer onto a typed data set
  preserves the table name (bug #57894)
- fixed ReadFieldLength to return a long so bigint autoincrement columns can work (bug #58373)
- fixed bug where older versions of MySQL would present cast(0 as decimal(0,0)) as string 
  that caused our EF code to throw an exception as it tried to convert that to bool
  (bug #55349)
- change reader to close the connection if CommandBehavior.CloseConnection is given and an
  exception is generated (bug #58652)
- removed extra call to Update in MySqlDataAdapter introduced with bug fix to bug #54863.
  It seems to not be necessary (bug #58853)
- fixed unnecessary string code in MySqlTokenizer (bug #58757)
- fixed MembershipProvider to properly set a hash key when using a keyed hash alogrithm (bug #58906)
- small code adjustment to make sure our object enumeration works with MySQL 5.5